--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -1,4 +1,4 @@
-<div>
-	<span class="badge">{{card.number}}</span> 
+<div class="card" [style.color]="card.suit.slice(1,2)=='h'||card.suit.slice(1,2)=='d' ? 'red' : 'black'">
+	<span>{{card.number}}</span> 
 	<span [innerHTML]="card.suit"></span>
 </div>
