--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -1,4 +1,5 @@
-<div class="card" [style.color]="card.suit.slice(1,2)=='h'||card.suit.slice(1,2)=='d' ? 'red' : 'black'">
-	<span>{{card.number}}</span> 
+<div class="card" 
+[style.color]="card.suit.slice(1,2)=='h'||card.suit.slice(1,2)=='d' ? 'red' : 'black'">
+	<span>{{card.number | pictureCard}}</span> 
 	<span [innerHTML]="card.suit"></span>
 </div>
